--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "calculator-practical",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://yagnesh-hadiya.github.io/calculator-practical",
   "dependencies": {
     "cra-template": "1.2.0",
     "react": "^19.0.0",
@@ -13,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -37,6 +40,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
+    "gh-pages": "^6.2.0",
     "jest": "^27.5.1"
   }
 }
